# zotero-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
helper/zcli-helper-zotero/: README.md  bootstrap.js  manifest.json  updates.json
npm/lib/: platform.js
npm/scripts/: package-native.js  postinstall.js
npm/tests/: helper-fast.js  smoke.js
skills/zotero-cli/: SKILL.md
skills/zotero-cli-lfz/: SKILL.md
src/: activity.rs  cli.rs  config.rs  date_range.rs  helper.rs  index.rs  lfz.rs  lib.rs  main.rs  mirror.rs  output.rs  paths.rs  setup.rs  skill.rs  zotero.rs
tests/: cli.rs
