[package]
name = "zotero-cli"
version = "0.1.0"
edition = "2021"
description = "Fast local Zotero CLI for humans and agents"
license = "MIT"

[lib]
name = "zcli"
path = "src/lib.rs"

[[bin]]
name = "zcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
